MDL-61657 block_myoverview: whitespace and css-style fixes

--- a/theme/bootstrapbase/less/moodle/blocks.less
+++ b/theme/bootstrapbase/less/moodle/blocks.less
@@ -344,7 +344,7 @@
     background-color: transparent;
 
     .row-fluid [class*="span"] {
-        margin-left:0px;
+        margin-left: 0;
     }
 
     .event-list-item {
